--- a/MasterMind/Views/Game/Partida.cshtml
+++ b/MasterMind/Views/Game/Partida.cshtml
@@ -52,6 +52,18 @@
     <div id="divCartas" title="Responder" onclick="Responder()">
         <img src="@Url.Content("~/Images/cartas2.png")"/>
     </div>
+
+    <div id="divSeta" title="Clique nas carta para responder a pergunta">
+        <img src="@Url.Content("~/Images/seta.gif")"/>
+    </div>
+
+    <div id="divCerto" title="Resposta Correta">
+        <img src="@Url.Content("~/Images/certo.jpg")"/>
+    </div>
+
+    <div id="divErrado" title="Resposta Errada">
+        <img src="@Url.Content("~/Images/errado.jpg")"/>
+    </div>
 </div>
 
 <div id="divTabuleiro">
