--- a/MasterMind/Views/Personagens/Create.cshtml
+++ b/MasterMind/Views/Personagens/Create.cshtml
@@ -8,7 +8,9 @@
 
 <h2>INCLUIR PERSONAGEM</h2>
 
-@using (Html.BeginForm()) {
+@using (Html.BeginForm("Create", "Personagens", FormMethod.Post,
+                            new { enctype = "multipart/form-data" }))
+{
     @Html.AntiForgeryToken()
     @Html.ValidationSummary(true)
 
@@ -22,15 +24,24 @@
             @Html.LabelFor(model => model.Desc_person)
         </div>
         <div class="editor-field">
-            @Html.TextBoxFor(model => model.Desc_person, new  { @class="txtMedium" })
+            @Html.TextBoxFor(model => model.Desc_person, new { @class = "txtMedium" })
             @Html.ValidationMessageFor(model => model.Desc_person)
         </div>
+
+        <div class="editor-label">
+            @Html.LabelFor(model => model.Imagem)
+        </div>
+        <div class="editor-field">
+            <input type="file" name="photo" id="file" />
+        </div>
+
+
 
     </fieldset>
     <br />
     <div>
         <input class="btn btn-primary" type="submit" value="Incluir" />
-        <input class="btn btn-primary" type="button" value ="Voltar" onclick="window.location.href='@Url.Action("Index", "Personagens")'"/>
+        <input class="btn btn-primary" type="button" value ="Voltar" onclick="window.location.href='@Url.Action("Index", "Personagens")    '"/>
     </div>
 }
 
