--- a/MasterMind/Views/Personagens/Create.cshtml
+++ b/MasterMind/Views/Personagens/Create.cshtml
@@ -35,6 +35,17 @@
             <input type="file" name="photo" id="file" />
         </div>
 
+       <div class="editor-label">
+            @Html.Label("Tema")
+            @Html.DropDownListFor(u => u.Tema.Id_tema, new SelectList(ViewBag.ListaTemas, "Id_tema", "Desc_tema"), new { @class = "dropdownlist" })
+            @Html.ValidationMessageFor(model => model.Tema.Id_tema)
+        </div>
+
+       <div class="editor-field">
+            @Html.TextBoxFor(model => model.Nivel, new { @class = "txtMedium" })
+            @Html.ValidationMessageFor(model => model.Nivel)
+        </div>
+
 
 
     </fieldset>
