--- a/MasterMind/Views/Game/Partida.cshtml
+++ b/MasterMind/Views/Game/Partida.cshtml
@@ -5,6 +5,7 @@
     Layout = "~/Views/Shared/_LayoutTabuleiro.cshtml";
     Perguntas pergunta = ViewBag.PerguntaInicial;
     IList<Jogos> partida = ViewBag.Partida;
+    Jogos jogador = ViewBag.Jogador;
     
 }
 
@@ -13,7 +14,7 @@
 
 <div id="divPergunta">
     <div id="divPersonagem">
-        <img src="@Url.Content("~/Images/cartoon.jpg")"/>
+        <img src="@Url.Content(jogador.Usuario.Personagem.Imagem)" width="70" height="70"/>
     </div>
 
     <div id="divTextoPergunta">
@@ -98,7 +99,7 @@
         {
             <li>
                 <div class="dados-jogador">
-                    <span>@jogo.Usuario.Nome (@jogo.Usuario.Cidade/@jogo.Usuario.Estado-@jogo.Usuario.Pais)</span>
+                    <span> <img src="@Url.Content(jogo.Usuario.Personagem.Imagem)" width="50" height="50"/> @jogo.Usuario.Nome (@jogo.Usuario.Cidade/@jogo.Usuario.Estado-@jogo.Usuario.Pais)</span>
                     <br />
                     <div class="tema-jogador">
                         <span>&nbsp;&nbsp;Tema: @jogo.Tema.Desc_tema</span>
