--- a/MasterMind/Views/Shared/Site.Master
+++ b/MasterMind/Views/Shared/Site.Master
@@ -9,6 +9,13 @@
     <meta name="viewport" content="width=device-width,heigth=device-heigth" />
     <%: Styles.Render("~/Content/css") %>
     <%: Scripts.Render("~/bundles/modernizr") %>
+
+    <style>
+        .usuario-logado
+        {
+            float: right; padding-top: 20px; padding-left: 5px; font-size:large; border-left: solid; color: blue; height: 30px; margin: 0;
+        }
+    </style>
 </head>
 <body>
     <header>
@@ -20,8 +27,8 @@
                 <asp:Image ID="Image4" runat="server" class="tituloMM" ImageUrl="~/Images/letras.png" />
             </a>
 
+        <div class="usuario-logado"><%:Context.User.Identity.Name %></div>
         </div>
-
     </header>
     <div id="body">
         <asp:ContentPlaceHolder ID="FeaturedContent" runat="server" />
