--- a/MasterMind/Styles/jogo.css
+++ b/MasterMind/Styles/jogo.css
@@ -210,7 +210,7 @@ header .content-wrapper {
 .acertos-erros-jogador
 {
     float:left;
-    width: 55%;
+    width: 100%;
 }
 #divBody
 {
@@ -301,4 +301,24 @@ header .content-wrapper {
 #divErrado
 {
     display: none;
+}
+
+.usuario-logado
+{
+    float: right; padding-top: 20px; padding-left: 5px; font-size:large; border-left: solid; color: blue; height: 30px; margin: 0;
+}
+
+#divGame-Over, #divTextoPergunta, #divAlternativas, #divCartas, #divSeta 
+{
+    display: none;
+}
+
+#divGame-Over
+{
+    clear:both;
+    color: red;
+    padding: 150px 0px 0px 5px;
+    font-size: 3em;
+    font-weight: bolder;
+    font-family: Verdana;
 }
