--- a/MasterMind/Views/Shared/_LayoutTabuleiro.cshtml
+++ b/MasterMind/Views/Shared/_LayoutTabuleiro.cshtml
@@ -1,4 +1,5 @@
 ﻿@{
+    String nomeUsuario = String.IsNullOrEmpty(Context.User.Identity.Name) ? "Não Autenticado" : Context.User.Identity.Name;
 }
 
 <!DOCTYPE html>
@@ -46,9 +47,11 @@
                                 <li><a href="@Url.Action("Prototipo", "Game")">Prototipo</a></li>
                                 <li><a href="@Url.Action("Login", "Account")">Abandonar Jogo</a></li>
                             </ul>
+                            <div class="usuario-logado">
+                                @nomeUsuario
+                            </div>
                         </div>
 
-                        @*</div>*@
 
                     </div>
                 </div>
