--- a/MasterMind/Views/Shared/Site.Master
+++ b/MasterMind/Views/Shared/Site.Master
@@ -22,7 +22,7 @@
 
         <div class="content-wrapper">
 
-            <a href="<%: Url.Action("Index", "Home") %>">
+            <a href="<%: Url.Action("List", "Salas") %>">
                 <asp:Image ID="Image3" runat="server" class="logoMM" ImageUrl="~/Images/logo.png" />
                 <asp:Image ID="Image4" runat="server" class="tituloMM" ImageUrl="~/Images/letras.png" />
             </a>
